--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,13 @@ section {
 
 @media (max-width: 768px) {
     .accordion-item-hardware {
-        width: 400px;
+        width: 350px;
+    }
+
+    .hardware {
+        margin: 0;
+        padding: 0;
+        margin-bottom: 5rem;
     }
 }
 
@@ -823,12 +829,12 @@ footer {
     align-items: center;
     margin-bottom: 5rem;
     width: 80%;
-    height: 100%;
+    min-height: 80%;
 }
 
 .construcao-video iframe {
     width: 100%;
-    height: 100%;
+    min-height: 40rem;
     border: 3px solid var(--azul-claro);
     border-radius: 1rem;
     box-sizing: border-box;
